# AGC-in-Rust

./: AGC-in-Rust-Presentation.pptx  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  WORKSPACE.md  run-virtualagc.sh  spaceflight_context_index.md
.cargo/: config.toml
.claude/agents/: analyst.md  architect.md  code-review.md  debugger.md  developer.md
.github/workflows/: ci.yml
agc-board-nucleo-f722/: Cargo.toml  memory.x
agc-board-nucleo-f722/.cargo/: config.toml
agc-board-nucleo-f722/src/: lib.rs  state.rs
agc-board-nucleo-f767/: Cargo.toml  build.rs  memory.x
agc-board-nucleo-f767/.cargo/: config.toml
agc-board-nucleo-f767/src/: lib.rs  state.rs
agc-board-nucleo-f767/src/link/: dispatch.rs  mod.rs  uart.rs
agc-board-nucleo-f767/src/local/: mod.rs  timers.rs  watchdog.rs
agc-board-nucleo-f767/src/remote/: mod.rs  optics.rs  uplink.rs
agc-bridge-pico/: Cargo.toml  README.md  memory.x
agc-bridge-pico/.cargo/: config.toml
agc-bridge-pico/src/: console.rs  keymap.rs  link.rs  main.rs  state.rs
agc-core/: Cargo.toml
agc-core/src/: lib.rs  main.rs
agc-core/src/control/: attitude.rs  constants.rs  dap.rs  imu_control.rs  mod.rs  rcs_logic.rs  tvc.rs
agc-core/src/executive/: job.rs  mod.rs  restart.rs  scheduler.rs  waitlist.rs
agc-core/src/guidance/: entry.rs  lambert.rs  maneuver.rs  midcourse.rs  mod.rs  rendezvous.rs  targeting.rs
agc-core/src/hal/: dsky.rs  engine.rs  imu.rs  interrupts.rs  mod.rs  optics.rs  rcs.rs  runtime.rs  telemetry.rs  timers.rs  uplink.rs
agc-core/src/math/: kepler.rs  lambert.rs  linalg.rs  mod.rs  trig.rs
agc-core/src/navigation/: conics.rs  constants.rs  gravity.rs  integration.rs  kalman.rs  mod.rs  planetary.rs  star_catalog.rs  state_vector.rs  time.rs
agc-core/src/programs/: mod.rs  p00.rs  p00_idle.rs  p01_p02.rs  p06.rs  p11.rs  p11_eoi.rs  p15.rs  p20.rs  p20_p22.rs  p21.rs  p22.rs  p23.rs  p30.rs  p30_ext_dv.rs  p31.rs  p31_p34.rs  p32.rs  p33.rs  p34.rs  p37.rs  p37_return.rs  p40_p41.rs  p40_thrusting.rs  p47.rs  p51_imu_align.rs  p51_p52.rs  p61_entry.rs  p61_p67.rs
agc-core/src/services/: alarm.rs  average_g.rs  backup.rs  display.rs  fresh_start.rs  mod.rs  noun_table.rs  pinball.rs  t4rupt.rs  v_n.rs
agc-core/src/tables/: alarm_codes.rs  mod.rs  noun_table.rs  verb_table.rs
agc-core/src/tests/: agc_constants.rs  mock_hw.rs  mod.rs
agc-core/src/types/: angle.rs  delta_v.rs  matrix.rs  mod.rs  time.rs  vector.rs
agc-imu-platform/: Cargo.toml
agc-imu-platform/src/: lib.rs  platform.rs  quat.rs
agc-protocol/: Cargo.toml
agc-sim/: Cargo.toml  README.md
agc-test/: Cargo.toml
docs/: AGC Symbolic Listing.md  AGC-in-Rust-Presentation.pptx  agc-reference-constants.md  architecture.md  external-peripheral-protocol.md  fixtures.md  hardware-bom.md  p40_burn_demo.md  testing.md
input/: AGC Quick Reference.md  AGC Symbolic Listing.md  CODE_AUDIT_REPORT.md
specs/: README.md  attitude-spec.md  average-g-spec.md  conics-spec.md  control-attitude.md  control-dap.md  control-imu-control.md  control-rcs-logic.md  control-tvc.md  dap-spec.md  end-to-end-mission-testing-plan.md  entry-guidance-plan.md  executive-restart.md  executive-scheduler.md  executive-spec.md  executive-waitlist.md  gmst-ecef-plan.md  gravity-spec.md  guidance-maneuver.md  guidance-targeting.md  hal-spec.md  hal.md  imu-control-spec.md  integration-spec.md  kepler-spec.md  lambert-spec.md  linalg-spec.md  loadable-verbs.txt  lunar-ephemeris-research.md  maneuver-spec.md  math-kepler.md  math-lambert.md  math-linalg.md  math-trig.md  milestone-3-architect-review.md  navigation-conics.md  navigation-gravity.md  navigation-integration.md  navigation-state-vector.md  p00-spec.md  (+39 more)
specs-test/: AGC_Rust_Test_Specification.md
transformation/: README.md  blockers.md  decisions.md  infrastructure.md  progress.md  specifications.md  tasks.md  validation.md
(+80 files in other folders)
