[workspace]
members = [
    "agc-core",
    "agc-sim",
    "agc-test",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AGC-in-Rust contributors"]

[workspace.dependencies]
# No external dependencies for agc-core (no_std)
# Simulation and test crates use std

[profile.release]
# Optimize for size on embedded target
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
