[package]
name = "agc-board-nucleo-f767"
version = "0.1.0"
edition = "2021"
description = "Bare-metal HAL for AGC-in-Rust on Nucleo-F767ZI"

[dependencies]
agc-core          = { path = "../agc-core",          features = ["bare-metal"] }
agc-protocol      = { path = "../agc-protocol" }
agc-imu-platform  = { path = "../agc-imu-platform" }
cortex-m     = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt  = "0.7"
stm32f7xx-hal = { version = "0.8", features = ["stm32f767", "rt"] }
embedded-hal    = "1.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
nb           = "1"
heapless     = "0.8"
libm         = "0.2"
defmt        = "0.3"
defmt-rtt    = "0.4"
panic-probe  = { version = "0.3", features = ["print-defmt"] }

[[bin]]
name = "agc"
path = "src/bin/agc.rs"
test = false
bench = false
